# Community-server

./: README.md  package-lock.json
documents/01、项目计划/: 版本迭代计划.emmx  项目开发计划.xlsx
sc-cpp/: CMakeLists.txt  README.md  ScCpp.sln  copy-resources.bat  exclude.txt
sc-cpp/common-lib/: CMakeLists.txt  common-lib.vcxproj  common-lib.vcxproj.filters  pch.h
sc-cpp/common-lib/include/: CharsetConvertHepler.h  CommonMacros.h  ExcelComponent.h  FastDfsClient.h  KafkaClient.h  NacosClient.h  RocketClient.h  StringUtil.h  YamlHelper.h
sc-cpp/common-lib/include/fastdfs/: fastdfs_client_win.h
sc-cpp/common-lib/include/fastdfs/conf/: client.conf
sc-cpp/common-lib/src/: CharsetConvertHepler.cpp  ExcelComponent.cpp  FastDfsClient.cpp  KafkaClient.cpp  NacosClient.cpp  RocketClient.cpp  StringUtil.cpp  YamlHelper.cpp
sc-cpp/http-lib/: CMakeLists.txt  http-lib.vcxproj  pch.h
sc-cpp/http-lib/include/: HttpLibMacros.h  HttpServer.h  JWTUtil.h
sc-cpp/http-lib/include/api/: ApiHelper.h  Aspect.h
sc-cpp/http-lib/include/cinatra/: request.hpp
sc-cpp/http-lib/src/: HttpServer.cpp  JWTUtil.cpp
sc-cpp/http-server-demo/: CMakeLists.txt  README.md  http-server-demo.vcxproj  http-server-demo.vcxproj.filters  main.cpp
sc-cpp/mysql-lib/: CMakeLists.txt  mysql-lib.vcxproj
sc-cpp/mysql-lib/include/: BaseDAO.h  ConnectionPool.h  DbInit.h  Mapper.h  SqlSession.h  TransactionManager.h  TryCatchFinally.h
sc-cpp/mysql-lib/src/: BaseDAO.cpp  ConnectionPool.cpp  DbInit.cpp  SqlSession.cpp
sc-cpp/property-manage/: CMakeLists.txt  ServerInfo.h  main.cpp  property-manage.vcxproj  property-manage.vcxproj.filters
sc-cpp/sc-car/: CMakeLists.txt  README.md  main.cpp  sc-car.vcxproj  sc-car.vcxproj.filters
sc-cpp/sc-costManagement/: Macros.h  main.cpp  sc-costManagement.vcxproj  sc-costManagement.vcxproj.filters
sc-cpp/sc-sample/: Macros.h  README.md  main.cpp  sc-sample.vcxproj  sc-sample.vcxproj.filters  stdafx.h
sc-front/: .env  .eslintignore  .eslintrc.cjs  .gitignore  README.md  index.html  package.json  prettier.config.js  tailwind.config.js  vite.config.js
sc-front/src/: main.js
sc-java/: README.md  pom.xml
sc-java/code-generator/: README.md  pom.xml
sc-java/sc-apis/: pom.xml
sc-java/sc-common/: README.md  pom.xml
sc-java/sc-common-menu/: Dockerfile  pom.xml
sc-java/sc-community/: Dockerfile  pom.xml
sc-java/sc-doc/: Dockerfile  README.md  pom.xml
sc-java/sc-domain/: README.md  pom.xml
sc-java/sc-gateway/: Dockerfile  pom.xml
sc-java/sc-hp/: DockerFIle  README.md  pom.xml
sc-java/sc-login/: Dockerfile  pom.xml
sc-java/sc-management/: pom.xml
sc-java/sc-menu/: Dockerfile  pom.xml
sc-java/sc-oauth2/: Dockerfile  pom.xml
sc-java/sc-repair/: README.md  pom.xml
sc-java/sc-report-management/: README.md  pom.xml
sc-java/sc-setting/: Dockerfile  pom.xml
sc-java/sc-store/: DockerFIle  README.md  pom.xml
(+1972 files in other folders)
